# document_analyzer

./: Dockerfile  Readme.md  constants.py  main.py  models.py  prompts.py  pyproject.toml
Image_extraction/: get_image_coord.py
MongoDB/: database.py
Text_extraction/: extract_data.py  google_llm.py
USE CASE Number-6(Doc to Data)/: Details of use case-6 members.txt  Master UNIT & DISTRICT, Other tables.xlsx
USE CASE Number-6(Doc to Data)/Master Stamps_List/: Stamp Names.txt
Validations/: validate_forms.py
