[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "SatyaHimavanth",email = "himavantht31@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4.0"
dependencies = [
    "fastapi[all] (>=0.115.14,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "pdf2image (>=1.17.0,<2.0.0)",
    "pillow (>=11.2.1,<12.0.0)",
    "google (>=3.0.0,<4.0.0)",
    "google-genai (>=1.21.1,<2.0.0)",
    "pymongo (>=4.13.2,<5.0.0)",
    "langchain (>=0.3.26,<0.4.0)",
    "langchain-groq (>=0.3.4,<0.4.0)",
    "black (>=25.1.0,<26.0.0)",
    "python-jose[cryptography] (>=3.5.0,<4.0.0)",
    "passlib[bcrypt] (>=1.7.4,<2.0.0)",
    "langchain-openai (>=0.3.27,<0.4.0)",
    "langchain-google-genai (>=2.1.5,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
